--- a/index.html
+++ b/index.html
@@ -76,10 +76,9 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Ministries</a>
                     <div class="dropdown-menu bg-light m-0">
-                        <a href="prison.html" class="dropdown-item">Prison</a>
+
                         <a href="school.html" class="dropdown-item">School</a>
-                        <a href="hospital.html" class="dropdown-item">Hospital</a>
-                        <a href="street.html" class="dropdown-item">Street</a>
+
                     </div>
                 </div>
                 <div class="nav-item dropdown">
@@ -89,8 +88,7 @@
                         <a href="awm.html" class="dropdown-item">AWM</a>
                         <a href="youth.html" class="dropdown-item">Youth</a>
                         <a href="chaplaincy.html" class="dropdown-item">Chaplaincy</a>
-                        <a href="masterguide.html" class="dropdown-item">Masterguide</a>
-                        <a href="elders.html" class="dropdown-item">Elders</a>
+
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -116,7 +114,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/image5.jpeg" alt="Image">
+                    <img class="w-100" src="img/image10.jpeg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
@@ -189,8 +187,8 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden ps-5 pt-5 h-100" style="min-height: 400px;">
-                        <img class="position-absolute w-100 h-100" src="img/image9.jpg" alt="" style="object-fit: cover;">
-                        <img class="position-absolute top-0 start-0 bg-white pe-3 pb-3" src="img/image1.jpg" alt="" style="width: 200px; height: 200px;">
+                        <img class="position-absolute w-100 h-100" src="img/image1.jpg" alt="" style="object-fit: cover;">
+                        <img class="position-absolute top-0 start-0 bg-white pe-3 pb-3" src="img/image9.jpg" alt="" style="width: 200px; height: 200px;">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -274,29 +272,21 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">News</a>
-                    <a class="btn btn-link" href="">Ministries</a>
+                    <a class="btn btn-link" href="amo.html">Adventist Men Ministries</a>
+                    <a class="btn btn-link" href="awm.html">Adventist Women Ministries</a>
+                    <a class="btn btn-link" href="school.html">Tommie Fulp Adventist School AND JSS</a>
+                    <a class="btn btn-link" href="youth.html">Youth Ministries</a>
+                    <a class="btn btn-link" href="chaplaincy.html">Chaplaincy</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Popular Links</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">News</a>
-                    <a class="btn btn-link" href="">Support</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="services.html">Our Services</a>
+                    <a class="btn btn-link" href="#">Home</a>
+
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h6 class="text-white mt-4 mb-3">Follow Us</h6>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
+
             </div>
         </div>
     </div>
