--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/image10.jpeg" alt="Image">
+                    <img class="w-100" src="img/image8.jpeg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
@@ -268,7 +268,7 @@
                     <h4 class="text-white mb-4">Get in touch</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kapenguria Road, Upper Kabete, Nairobi</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+254 714 499 325</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>@kabetesda</p>
+
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Quick Links</h4>
@@ -292,16 +292,16 @@
     </div>
 
 
-    <!-- Copyright -->
+    <!-- Copyright 
     <div class="container-fluid copyright text-light py-4 wow fadeIn" data-wow-delay="0.1s">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a href="#">Kabete Main SDA Church</a>, All Right Reserved.
+                <!--    &copy; <a href="#">Kabete Main SDA Church</a>, All Right Reserved.
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 
 
     <!-- Back to Top -->
