--- a/index.html
+++ b/index.html
@@ -286,6 +286,12 @@
                     <a class="btn btn-link" href="#">Home</a>
 
                 </div>
+                <div class="col-lg-3 col-md-6">
+                    <h6 class="text-white mt-4 mb-3"></h6>
+                    <div class="d-flex pt-2">
+
+                    </div>
+                </div>
 
             </div>
         </div>
