Update of pages body

--- a/amo.html
+++ b/amo.html
@@ -111,7 +111,20 @@
         </div>
     </div>
 
+    <!-- AMO-->
+    <div class="container-xxl py-6">
+        <div class="container">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                <h2 class="text-primary text-uppercase mb-2">Adventist Men Ministries</h2>
+                <p>At Kabete Main Church, the Adventist Men Organization (AMO) activities include in-reach and outreach programmes, church development and Team building events.
 
+                    Men have a special responsibility in society as they serve as leaders in their families and as servant-minded role models in their communities As men grow in maturity and raise a family, they have an incredibly important role to play as husbands and fathers. 
+                    In showing loving leadership at home, fathers are able to give their children a glimpse of the love, patience, compassion and forgiveness of God, our Heavenly Father.
+                    There has never been a more important time for men to live lives guided by moral, biblical values, rooted in a sense of servant leadership. In a world jaded by stories of abuse and neglect at the hands of men, it’s time to model how men of principle should behave. This takes practical, consistent, positive living, not just lip service when people are looking.
+                    </p>
+            </div>
+        </div>
+    </div>
 
 
     <!-- Footer-->
