--- a/awm.html
+++ b/awm.html
@@ -111,7 +111,15 @@
         </div>
     </div>
 
-
+    <!-- AWM-->
+    <div class="container-xxl py-6">
+        <div class="container">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                <h2 class="text-primary text-uppercase mb-2">Adventist Women Ministries</h2>
+                <p>Kabete Main Adventist Women Ministries (AWM) exists to uphold, encourage, and challenge Adventist women in their pilgrimage as disciples of Jesus Christ and members of His world church. </p>
+            </div>
+        </div>
+    </div>
 
 
     <!-- Footer-->
