--- a/school.html
+++ b/school.html
@@ -111,6 +111,16 @@
         </div>
     </div>
 
+    <!-- church school-->
+    <div class="container-xxl py-6">
+        <div class="container">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                <h2 class="text-primary text-uppercase mb-2">Tommie Fulp Adventist School and JSS</h2>
+                <p>Tommie Fulp Adventist School and JSS is an Adventist-based institution sponsored by Kabete Main SDA Church. The school adheres to the Adventist education system, which emphasizes holistic development by combining faith, academics, and character formation. Alongside the standard curriculum, the school places a strong focus on Christian values, spiritual growth, and community service. </p>
+            </div>
+        </div>
+    </div>
+
 
 
 
