--- a/youth.html
+++ b/youth.html
@@ -111,7 +111,22 @@
         </div>
     </div>
 
-
+    <!-- Youth-->
+    <div class="container-xxl py-6">
+        <div class="container">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                <h2 class="text-primary text-uppercase mb-2">Adventist Youth Ministries</h2>
+                <p>Kabete Youth ministry is dedicated to nurturing the spiritual, social, and physical development of young people. It focuses on engaging youth in faith-based activities, leadership training, and community service, with the goal of empowering them to live out their Christian beliefs and become active participants in the church and society.
+                    Senior Youth Leadership
+                    •	Young Adults
+                    •	Ambassadors
+                    Master guide
+                    •	Pathfinder
+                    •	Adventurers
+                    </p>
+            </div>
+        </div>
+    </div>
 
 
     <!-- Footer-->
