--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
     </div>
 
 
-    <!-- Leadership-->
+    <!-- Leadership
     <div class="container-xxl py-6">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
@@ -147,9 +147,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>  -->
 
-    <!-- History-->
+    <!-- History
     <div class="container-xxl py-6">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
@@ -167,23 +167,23 @@
                     <h4 class="text-white mb-4">Get in touch</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kapenguria Road, Upper Kabete, Nairobi</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+254 714 499 325</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>@kabetesda</p>
+
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">News</a>
-                    <a class="btn btn-link" href="">Ministries</a>
+                    <a class="btn btn-link" href="amo.html">Adventist Men Ministries</a>
+                    <a class="btn btn-link" href="awm.html">Adventist Women Ministries</a>
+                    <a class="btn btn-link" href="school.html">Tommie Fulp Adventist School AND JSS</a>
+                    <a class="btn btn-link" href="youth.html">Youth Ministries</a>
+                    <a class="btn btn-link" href="chaplaincy.html">Chaplaincy</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Popular Links</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">News</a>
-                    <a class="btn btn-link" href="">Support</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="services.html">Our Services</a>
+                    <a class="btn btn-link" href="#">Home</a>
+
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h6 class="text-white mt-4 mb-3">Follow Us</h6>
@@ -194,6 +194,7 @@
                         <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
