--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         </div>
     </div>
 
-        <!-- Beliefs-->
+    <!-- Beliefs
     <div class="container-xxl py-6">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
