--- a/about.html
+++ b/about.html
@@ -185,6 +185,7 @@
                     <a class="btn btn-link" href="#">Home</a>
 
                 </div>
+                <!--
                 <div class="col-lg-3 col-md-6">
                     <h6 class="text-white mt-4 mb-3">Follow Us</h6>
                     <div class="d-flex pt-2">
@@ -193,7 +194,7 @@
                         <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </div>
