--- a/about.html
+++ b/about.html
@@ -201,7 +201,7 @@
     </div>
 
 
-    <!-- Copyright -->
+    <!-- Copyright 
     <div class="container-fluid copyright text-light py-4 wow fadeIn" data-wow-delay="0.1s">
         <div class="container">
             <div class="row">
