--- a/about.html
+++ b/about.html
@@ -53,12 +53,7 @@
                     <small class="fa fa-phone-alt text-primary me-2"></small>
                     <small>+254 714 499 325</small>
                 </div>
-                <div class="h-100 d-inline-flex align-items-center mx-n2">
-                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-square btn-link rounded-0" href=""><i class="fab fa-instagram"></i></a>
-                </div>
+  
             </div>
         </div>
     </div>
@@ -68,23 +63,22 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
-            <h2 class="m-0">Kabete Main SDA Church</h2>
+            <h2 class="m-0">SDA Kabete Main Church</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link active">About</a>
+                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="services.html" class="nav-item nav-link">Our Services</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Ministries</a>
                     <div class="dropdown-menu bg-light m-0">
-                        <a href="prison.html" class="dropdown-item">Prison</a>
+
                         <a href="school.html" class="dropdown-item">School</a>
-                        <a href="hospital.html" class="dropdown-item">Hospital</a>
-                        <a href="street.html" class="dropdown-item">Street</a>
+
                     </div>
                 </div>
                 <div class="nav-item dropdown">
@@ -94,8 +88,7 @@
                         <a href="awm.html" class="dropdown-item">AWM</a>
                         <a href="youth.html" class="dropdown-item">Youth</a>
                         <a href="chaplaincy.html" class="dropdown-item">Chaplaincy</a>
-                        <a href="masterguide.html" class="dropdown-item">Masterguide</a>
-                        <a href="elders.html" class="dropdown-item">Elders</a>
+
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
