--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
                     <a class="btn btn-link" href="#">Home</a>
 
                 </div>
+                <!--
                 <div class="col-lg-3 col-md-6">
                     <h6 class="text-white mt-4 mb-3">Follow Us</h6>
                     <div class="d-flex pt-2">
@@ -294,7 +295,7 @@
                         <a class="btn btn-square btn-outline-light me-1" href=""><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-square btn-outline-light me-0" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </div>
@@ -306,12 +307,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                <!--    &copy; <a href="#">Kabete Main SDA Church</a>, All Right Reserved.
+                    &copy; <a href="#">Kabete Main SDA Church</a>, All Right Reserved.
                 </div>
             </div>
         </div>
-    </div>-->
-
+    </div>
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
