--- a/youth.html
+++ b/youth.html
@@ -111,11 +111,11 @@
                 <h2 class="text-primary text-uppercase mb-2">Adventist Youth Ministries</h2>
                 <p>Kabete Youth ministry is dedicated to nurturing the spiritual, social, and physical development of young people. It focuses on engaging youth in faith-based activities, leadership training, and community service, with the goal of empowering them to live out their Christian beliefs and become active participants in the church and society.</p>
                 <h3>Senior Youth Leadership</h3>
-
+                <p>     •   Young Adults</p>
+                <p>     •   Ambassadors</p>
                 <h3>Master guide</h3>
                 <p>     •	Pathfinder</p>
                 <p>     •	Adventurers</p>
-
             </div>
         </div>
     </div>
