--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
                     <h4 class="text-white mb-4">Get in touch</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kapenguria Road, Upper Kabete, Nairobi</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+254 714 499 325</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3">communications.kabetemainsda@gmail.com</i>Email</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>communications.kabetemainsda@gmail.com</p>
 
                 </div>
                 <div class="col-lg-3 col-md-6">
