--- a/amo.html
+++ b/amo.html
@@ -133,7 +133,7 @@
                     <h4 class="text-light mb-4">Quick Links</h4>
                     <a class="btn btn-link" href="amo.html">Adventist Men Ministries</a>
                     <a class="btn btn-link" href="awm.html">Adventist Women Ministries</a>
-                    <a class="btn btn-link" href="school.html">Tommie Fulp Adventist School AND JSS</a>
+                    <a class="btn btn-link" href="school.html">Tommie Fulp Adventist School and JSS</a>
                     <a class="btn btn-link" href="youth.html">Youth Ministries</a>
                     <a class="btn btn-link" href="chaplaincy.html">Chaplaincy</a>
                 </div>
