--- a/index.html
+++ b/index.html
@@ -73,24 +73,20 @@
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="services.html" class="nav-item nav-link">Our Services</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Ministries</a>
-                    <div class="dropdown-menu bg-light m-0">
-
-                        <a href="school.html" class="dropdown-item">School</a>
-
-                    </div>
-                </div>
+                <a href="school.html" class="dropdown-item">Tommie Fulp School</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Departments</a>
                     <div class="dropdown-menu bg-light m-0">
+                        <a href="Pastarol.html" class="dropdown-item">Pastarol Desk</a>
                         <a href="amo.html" class="dropdown-item">AMO</a>
                         <a href="awm.html" class="dropdown-item">AWM</a>
                         <a href="youth.html" class="dropdown-item">Youth</a>
                         <a href="chaplaincy.html" class="dropdown-item">Chaplaincy</a>
+                        <a href="choir.html" class="dropdown-item">Choir</a>
 
                     </div>
                 </div>
+                <a href="resources.html" class="dropdown-item">Resources</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
         </div>
@@ -188,7 +184,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden ps-5 pt-5 h-100" style="min-height: 400px;">
                         <img class="position-absolute w-100 h-100" src="img/image1.jpg" alt="" style="object-fit: cover;">
-                        <img class="position-absolute top-0 start-0 bg-white pe-3 pb-3" src="img/image9.jpg" alt="" style="width: 200px; height: 200px;">
+                        <!--<img class="position-absolute top-0 start-0 bg-white pe-3 pb-3" src="img/image9.jpg" alt="" style="width: 200px; height: 200px;"> -->
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -267,8 +263,8 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Get in touch</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kapenguria Road, Upper Kabete, Nairobi</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+254 714 499 325</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>communications.kabetemainsda<br>@gmail.com</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="https://api.whatsapp.com/send/?phone=%2B254714499325&text&type=phone_number&app_absent=0">Chat With us on WhatsApp</a></p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i><h4>communications.kabetemainsda@gmail.com</h4></p>
 
                 </div>
                 <div class="col-lg-3 col-md-6">
