--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="services.html" class="nav-item nav-link">Our Services</a>
-                <a href="school.html" class="dropdown-item">Tommie Fulp School</a>
+                <a href="school.html" class="nav-item nav-link">Tommie Fulp School</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Departments</a>
                     <div class="dropdown-menu bg-light m-0">
@@ -86,7 +86,7 @@
 
                     </div>
                 </div>
-                <a href="resources.html" class="dropdown-item">Resources</a>
+                <a href="resources.html" class="nav-item nav-link">Resources</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
         </div>
@@ -263,7 +263,7 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Get in touch</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kapenguria Road, Upper Kabete, Nairobi</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="https://api.whatsapp.com/send/?phone=%2B254714499325&text&type=phone_number&app_absent=0">Chat With us on WhatsApp</a></p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href=”https://wa.me/+254714499325″ target=”_blank”>Chat with us on WhatsApp!</a></p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i><h4>communications.kabetemainsda@gmail.com</h4></p>
 
                 </div>
