--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Get in touch</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kapenguria Road, Upper Kabete, Nairobi</p>
-                    <a href=”https://wa.me/+254714499325″ target=”_blank”></a><p class="mb-2"><i class="fa fa-phone-alt me-3"></i>Chat with us on WhatsApp!</p></a>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i><h4>communications.kabetemainsda@gmail.com</h4></p>
+                    <a href=”https://wa.me/+254714499325″ target=”_blank”><p class="mb-2"><i class="fa fa-phone-alt me-3"></i>Chat with us on WhatsApp!</p></a>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>communications.kabetemainsda@gmail.com</p>
 
                 </div>
                 <div class="col-lg-3 col-md-6">
